--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="applicable-device" content="pc,mobile">
     <link rel="apple-touch-icon" href="{{ site.url }}/images/assets/water-show-icon.jpg">
     <meta name="apple-mobile-web-app-title" content="Water Show">
-    {% stylesheet application %}
+    <link type="text/css" rel="stylesheet" href="/assets/application.css">
   </head>
   <body>
     <div id="wrapper">
@@ -122,6 +122,6 @@
         </div>
       </footer>
     </div>
-    {% javascript application %}
+    <script type="text/javascript" src="/assets/application.js"></script>
   </body>
 </html>
