--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,14 @@
     <link rel="apple-touch-icon" href="{{ site.url }}/images/assets/water-show-icon.jpg">
     <meta name="apple-mobile-web-app-title" content="Water Show">
     <link type="text/css" rel="stylesheet" href="/assets/application.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127399255-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-127399255-1');
+    </script>
   </head>
   <body>
     <div id="wrapper">
