--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,43 +21,30 @@
     </script>
   </head>
   <body>
-    <div id="wrapper">
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="nav-topbar clearfix topbar-accent hidden-xs">
-          <div class="container">
-            <div class="left">
-              <ul class="nav navbar-nav navbar-left">
-                <li><a href="{{ site.url }}/contact/"><i class="fa fa-map-marker"></i> {{ site.address }}</a></li>
-              </ul>
-            </div>
-            <div class="right">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i> {{ site.email }}</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
+    <header id="luxbar" class="luxbar-fixed">
+      <input type="checkbox" class="luxbar-checkbox" id="luxbar-checkbox">
+      <div class="luxbar-menu luxbar-menu-right luxbar-menu-white">
         <div class="container">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav-collapse">
-            <span class="sr-only">Toggle Navigation</span>
-            <i class="fa fa-bars"></i>
-          </button>
-          <a href="{{ site.url }}" class="navbar-brand"><img src="/images/assets/water-show-logo.png" alt="WATER SHOW Logo"></a>
-          <div id="main-nav-collapse" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav main-navbar-nav">
-              <li class="dropdown {% if page.category == 'products' %}active{% endif %}">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS <i class="fa fa-angle-down"></i></a>
-                <ul class="dropdown-menu" role="menu">{% for post in site.categories["products"] %}
-                  <li class="{% if post.title == page.title %}active{% endif %}"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>{% endfor %}
-                </ul>
-              </li>
-              <li class="{% if page.category == 'news' %}active{% endif %}"><a href="{{ site.url }}/news/">NEWS</a></li>
-              <li class="{% if page.category == 'about' %}active{% endif %}"><a href="{{ site.url }}/about/">ABOUT WATER SHOW</a></li>
-              <li class="{% if page.category == 'contact' %}active{% endif %}"><a href="{{ site.url }}/contact/">CONTACT US</a></li>
-            </ul>
-          </div>
+          <ul class="luxbar-navigation">
+            <li class="luxbar-header">
+              <a href="{{ site.url }}"><img src="{{ site.url }}/images/assets/water-show-logo.png" width="143" height="53" alt="WATER SHOW Logo"></a>
+              <label class="luxbar-hamburger luxbar-hamburger-doublespin" id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
+            </li>
+            <li class="luxbar-item dropdown {% if page.category == 'products' %}active{% endif %}"><a href="{{ site.url }}/products/">Products</a>
+              <ul>{% for post in site.categories["products"] %}
+                <li class="luxbar-item {% if post.title == page.title %}active{% endif %}"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>{% endfor %}
+              </ul>
+            </li>
+            <li class="luxbar-item {% if page.category == 'news' %}active{% endif %}"><a href="{{ site.url }}/news/">News</a></li>
+            <li class="luxbar-item {% if page.category == 'about' %}active{% endif %}"><a href="{{ site.url }}/about/">About WATER SHOW</a></li>
+            <li class="luxbar-item {% if page.category == 'contact' %}active{% endif %}"><a href="{{ site.url }}/contact/">Contact Us</a></li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </header>
+    <div class="margin-top-58"></div>
+    <div id="wrapper">
+      
       {{ content }}
       <footer>
         <div class="container">
@@ -127,6 +114,7 @@
         </div>
       </footer>
     </div>
-    <script type="text/javascript" src="/assets/application.js"></script>
+    <div class="back-to-top"><a href="#"><img src="{{ site.url }}/images/assets/up.png" width="26" height="26" alt="Back To Top"></a></div>{% if page.category == 'home' %}
+    <script type="text/javascript" src="/assets/application.js"></script>{% endif %}
   </body>
 </html>
