--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -1,16 +1,11 @@
 ---
 layout: default
 ---
-<div class="page-header one-column text-center">
-  <div class="container">
-    <h1 class="page-title">{{ page.title }}</h1>
-    <ol class="breadcrumb link-accent">
-      <li><a href="{{ site.url }}">Home</a></li>{% if page.layout == 'products-article' %}
-      <li><a href="{{ site.url }}/products/">Products</a></li>{% endif %}{% if page.layout == 'news-article' %}
-      <li><a href="{{ site.url }}/news/">News</a></li>{% endif %}
-      <li class="active">{{ page.title }}</li>
-    </ol>
-  </div>
+<div style="background-color:#f5f5f5">
+  <ol class="breadcrumb container">
+    <li><a href="{{ site.url }}">Home</a></li>
+    <li class="active">{{ page.title }}</li>
+  </ol>
 </div>
 <div class="page-content">
   <div class="container">
