--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -7,8 +7,6 @@ layout: default
     <li class="active">{{ page.title }}</li>
   </ol>
 </div>
-<div class="page-content">
-  <div class="container">
-    {{ content }}
-  </div>
+<div class="container margin-top-40">
+  {{ content }}
 </div>
