--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <div style="background-color:#f5f5f5">
   <ol class="breadcrumb container">
-    <li><a href="{{ site.url }}">Home</a></li>
+    <li><a href="{{ site.url }}">Home</a></li>{% if page.layout == 'products-article' or page.layout == 'news-article' %}
+    <li><a href="{{ site.url }}/{{ page.type-en }}/">{{ page.type }}</a></li>{% endif %}
     <li class="active">{{ page.title }}</li>
   </ol>
 </div>
