--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,7 @@
       </div>
     </footer>
     <div class="back-to-top"><a href="#"><img src="{{ site.url }}/images/assets/up.png" width="26" height="26" alt="Back To Top"></a></div>{% if page.category == 'home' %}
+    <link type="text/css" rel="stylesheet" href="/assets/carousel.css">
     <script type="text/javascript" src="/assets/application.js"></script>{% endif %}
   </body>
 </html>
