--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     </header>
     <div class="margin-top-58"></div>
     {{ content }}
-    <footer>
+    <footer class="margin-top-30">
       <div class="container">
         <div class="row margin-bottom-30">
           <div class="col-sm-6 col-md-4">
