--- a/_includes/products-list.html
+++ b/_includes/products-list.html
@@ -6,7 +6,7 @@
     <div class="thumbnail">
       <a href="{{ site.url }}{{ post.url }}"><img src="/images/products/{{ post.image }}.jpg" alt="{{ post.title }}"></a>
       <div class="caption text-center">
-        <h4 class="margin-top-20"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h4>
+        <h4 class="margin-top-20">{{ post.title }}</h4>
       </div>
     </div>
   </div>{% endfor %}
