--- a/_layouts/products-article.html
+++ b/_layouts/products-article.html
@@ -32,6 +32,7 @@ layout: pages
     <p>2. Connect fountain pump with connection</p>
     <p>3. Find the cables from the fountain frame,and connect to the  music controller</p>
     <p>4. Adjust all nozzles to be vertical,turn on the fountain by the music controller</p>{% endif %}
+    {% include feedback.html %}
     {% include products-list.html %}
   </div>
 </article>
