--- a/style.css
+++ b/style.css
@@ -529,6 +529,20 @@ img {
 .margin-bottom-80 {
   margin-bottom: 80px;
 }
+/*Form*/
+.form-control {
+  display: block;
+  width: 92%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 /*back-to-top*/
 .back-to-top {
   position: fixed;
