--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -1,11 +1,13 @@
-<h3 class="text-center margin-top-30">Get a Free Quote</h3>
+<div class="section-heading-center section-heading-linethrough">
+  <h2 class="heading">Get a Free Quote</h2>
+</div><h3 class="text-center margin-top-30"></h3>
 <form role="form" action="{{ site.oswweb-mail-url }}/fenlinmusicfountain-com-products-feedback.php" method="POST">
   <input type="text" name="url" class="form-control hidden" value="{{ site.url }}{{ page.url }}" readonly>
-  <h4 class="text-center margin-top-30">Your Name</h4>
+  <h4 class="margin-top-30">Your Name</h4>
   <input type="text" name="name" class="form-control" placeholder="Enter your full name">
-  <h4 class="text-center margin-top-30">Email Address</h4>
+  <h4 class="margin-top-30">Email Address</h4>
   <input type="email" name="email" class="form-control" placeholder="Enter your email">
-  <h4 class="text-center margin-top-30">Your Message</h4>
-  <textarea name="xinxi" class="form-control" cols="30" rows="3" placeholder="Your Message"></textarea>
-  <button type="submit" class="btn btn-primary">Send Message</button>
+  <h4 class="margin-top-30">Your Message</h4>
+  <textarea name="xinxi" class="form-control" placeholder="Your Message"></textarea>
+  <p><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
 </form>
