--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -1,7 +1,8 @@
 <div class="section-heading-center section-heading-linethrough">
   <h2 class="heading">Get a Free Quote</h2>
-</div><h3 class="text-center margin-top-30"></h3>
-<form role="form" action="{{ site.oswweb-mail-url }}/fenlinmusicfountain-com-products-feedback.php" method="POST">
+</div>
+<p>Contact us for a free consultation? We'd like to hear from you! Please fill out the form below and our fountain designer will contact you as soon as possible.</p>
+<form role="form" action="{{ site.oswweb-mail-url }}/fenlinmusicfountain-com-feedback.php" method="POST">
   <input type="text" name="url" class="form-control hidden" value="{{ site.url }}{{ page.url }}" readonly>
   <h4 class="margin-top-30">Your Name</h4>
   <input type="text" name="name" class="form-control" placeholder="Enter your full name">
@@ -9,5 +10,5 @@
   <input type="email" name="email" class="form-control" placeholder="Enter your email">
   <h4 class="margin-top-30">Your Message</h4>
   <textarea name="xinxi" class="form-control" placeholder="Your Message"></textarea>
-  <p><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
+  <p class="text-center"><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
 </form>
