--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -2,13 +2,13 @@
   <h2 class="heading">Get a Free Quote</h2>
 </div>
 <p>Contact us for a free consultation? We'd like to hear from you! Please fill out the form below and our fountain designer will contact you as soon as possible.</p>
-<form role="form" action="{{ site.oswweb-mail-url }}/fenlinmusicfountain-com-feedback.php" method="POST">
+<form action="{{ site.oswweb-mail-url }}//api/mail/send?app_key=3wIbClPjK7" method="POST">
   <input type="text" name="url" class="form-control hidden" value="{{ site.url }}{{ page.url }}" readonly>
   <h4 class="margin-top-30">Your Name</h4>
-  <input type="text" name="name" class="form-control" placeholder="Enter your full name">
+  <input type="text" name="name" class="form-control" placeholder="Enter your full name" required>
   <h4 class="margin-top-30">Email Address</h4>
-  <input type="email" name="email" class="form-control" placeholder="Enter your email">
+  <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
   <h4 class="margin-top-30">Your Message</h4>
-  <textarea name="xinxi" class="form-control" placeholder="Your Message"></textarea>
+  <textarea name="xinxi" class="form-control" placeholder="Your Message" required></textarea>
   <p class="text-center"><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
 </form>
