--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -7,7 +7,7 @@
   <h4 class="margin-top-30">Your Name</h4>
   <input type="text" name="name" class="form-control" placeholder="Enter your full name" required>
   <h4 class="margin-top-30">Email Address</h4>
-  <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
+  <input type="email1" name="email" class="form-control" placeholder="Enter your email" required>
   <h4 class="margin-top-30">Your Message</h4>
   <textarea name="xinxi" class="form-control" placeholder="Your Message" required></textarea>
   <p class="text-center"><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
