--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -2,7 +2,7 @@
   <h2 class="heading">Get a Free Quote</h2>
 </div>
 <p>Contact us for a free consultation? We'd like to hear from you! Please fill out the form below and our fountain designer will contact you as soon as possible.</p>
-<form action="{{ site.oswweb-mail-url }}/api/mail/send?app_key=3wIbClPjK7" method="POST">
+<form action="{{ site.oswweb-mail-url }}/api/mail/send?app_key=WZUM8utMM2" method="POST">
   <input type="text" name="url" class="form-control hidden" value="{{ site.url }}{{ page.url }}" readonly>
   <h4 class="margin-top-30">Your Name</h4>
   <input type="text" name="name" class="form-control" placeholder="Enter your full name" required>
