--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -10,5 +10,6 @@
   <input type="email1" name="email" class="form-control" placeholder="Enter your email" required>
   <h4 class="margin-top-30">Your Message</h4>
   <textarea name="xinxi" class="form-control" placeholder="Your Message" required></textarea>
+  <input type="hidden" name="grecaptcha_token" id="grecaptcha_token">
   <p class="text-center"><button type="submit" class="btn btn-primary margin-top-30">Send Message</button></p>
 </form>
