--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link type="text/css" rel="stylesheet" href="/assets/application.css">{% if page.category == 'home' %}
     <link type="text/css" rel="stylesheet" href="/assets/carousel.css">
     <script type="text/javascript" src="/assets/application.js"></script>{% endif %}{% if page.layout == 'products-article' %}
+    <script type="text/javascript" src="/assets/jquery-3.4.1.min.js"></script>
     <script src="https://recaptcha.net/recaptcha/api.js?render=6LdhCecUAAAAAOPaikB17lbIew8ZcCyXQZc8ee34"></script>{% endif %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127399255-1"></script>
     <script>
