--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@
     <meta name="apple-mobile-web-app-title" content="Water Show">
     <link type="text/css" rel="stylesheet" href="/assets/application.css">{% if page.category == 'home' %}
     <link type="text/css" rel="stylesheet" href="/assets/carousel.css">
-    <script type="text/javascript" src="/assets/application.js"></script>{% endif %}{% if page.layout == 'products-article' %}
-    <script type="text/javascript" src="/assets/jquery-3.4.1.min.js"></script>
-    <script src="https://recaptcha.net/recaptcha/api.js?render=6LdhCecUAAAAAOPaikB17lbIew8ZcCyXQZc8ee34"></script>{% endif %}
+    <script type="text/javascript" src="/assets/application.js"></script>{% endif %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127399255-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -99,15 +97,6 @@
         </div>
       </div>
     </footer>
-    <div class="back-to-top"><a href="#"><img src="{{ site.url }}/images/assets/up.png" width="26" height="26" alt="Back To Top"></a></div>{% if page.layout == 'products-article' %}
-    <script type="text/javascript">
-    $(function () {
-        grecaptcha.ready(function () {
-            grecaptcha.execute('6LdhCecUAAAAAOPaikB17lbIew8ZcCyXQZc8ee34').then(function (token) {
-                $('#grecaptcha_token').val(token)
-            });
-        });
-    });
-    </script>{% endif %}
+    <div class="back-to-top"><a href="#"><img src="{{ site.url }}/images/assets/up.png" width="26" height="26" alt="Back To Top"></a></div>
   </body>
 </html>
