--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
               <address class="contact-info">
                 <p><i class="fa fa-map-marker ico-styled text-primary"></i> <span itemprop="address">{{ site.address }}</span></p>
                 <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel1 }}"><span itemprop="telephone">{{ site.tel1 }}</span></a></p>
-                <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel2 }}"><span itemprop="telephone">{{ site.tel2 }}</span></a>(Alina Li)</p>
+                <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel2 }}"><span itemprop="telephone">{{ site.tel2 }}</span></a>(Lynn Yao)</p>
                 <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel3 }}"><span itemprop="telephone">{{ site.tel3 }}</span></a>(Flair Wu)</p>
                 <p><i class="fa fa-fax ico-styled text-primary"></i> {{ site.fax }}</p>
                 <p><i class="fa fa-envelope ico-styled text-primary"></i> <a href="mailto:{{ site.email }}"><span itemprop="email">{{ site.email }}</span></a></p>
