--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,13 +13,13 @@
     <link type="text/css" rel="stylesheet" href="/assets/application.css">{% if page.category == 'home' %}
     <link type="text/css" rel="stylesheet" href="/assets/carousel.css">
     <script type="text/javascript" src="/assets/application.js"></script>{% endif %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127399255-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMGTD4J8PX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-127399255-1');
+      gtag('config', 'G-YMGTD4J8PX');
     </script>
   </head>
   <body>
